[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/level_selection.png" type="Texture" id=1]
[ext_resource path="res://Scenes/LevelSelection.gd" type="Script" id=2]
[ext_resource path="res://src/lock.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 65, 65 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 76, 16 )

[node name="LevelSelection" type="Node2D"]
script = ExtResource( 2 )

[node name="LevelSelect" type="Sprite" parent="."]
position = Vector2( 428.482, 241.216 )
scale = Vector2( 0.446291, 0.446291 )
texture = ExtResource( 1 )

[node name="lvl1" type="TouchScreenButton" parent="."]
position = Vector2( 134, 111 )
shape = SubResource( 1 )

[node name="lvl2" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 363, 111 )
shape = SubResource( 1 )

[node name="lvl3" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 592, 111 )
shape = SubResource( 1 )

[node name="lvl4" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 244, 275 )
shape = SubResource( 1 )

[node name="lvl5" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 477, 275 )
shape = SubResource( 1 )

[node name="back" type="TouchScreenButton" parent="."]
position = Vector2( 53, 50 )
shape = SubResource( 2 )

[node name="lock2" type="TouchScreenButton" parent="."]
position = Vector2( 363.487, 110.471 )
scale = Vector2( 0.262336, 0.262336 )
normal = ExtResource( 3 )

[node name="lock3" type="TouchScreenButton" parent="."]
position = Vector2( 592.448, 111.144 )
scale = Vector2( 0.262336, 0.262336 )
normal = ExtResource( 3 )

[node name="lock4" type="TouchScreenButton" parent="."]
position = Vector2( 244.106, 274.506 )
scale = Vector2( 0.262336, 0.262336 )
normal = ExtResource( 3 )

[node name="lock5" type="TouchScreenButton" parent="."]
position = Vector2( 476.631, 274.506 )
scale = Vector2( 0.262336, 0.262336 )
normal = ExtResource( 3 )

[connection signal="released" from="lvl1" to="." method="_on_lvl1_released"]
[connection signal="released" from="lvl2" to="." method="_on_lvl2_released"]
[connection signal="released" from="lvl3" to="." method="_on_lvl3_released"]
[connection signal="released" from="lvl4" to="." method="_on_lvl4_released"]
[connection signal="released" from="lvl5" to="." method="_on_lvl5_released"]
[connection signal="released" from="back" to="." method="_on_back_released"]
